# screenbox-rockchip--buildroot

./: .gitignore  Config.in
configs/: rk1108-evb-v12_defconfig  rockchip_ScreenboxRk3399_defconfig  rockchip_ScreenboxRk3399_recovery_defconfig  rockchip_px3se_cut_defconfig  rockchip_px3se_defconfig  rockchip_px3se_minifs_defconfig  rockchip_px3se_recovery_defconfig  rockchip_rk3036_common_defconfig  rockchip_rk3036_cpp_defconfig  rockchip_rk3036_defconfig  rockchip_rk3036_dueros_defconfig  rockchip_rk3036_kernel_v4_4_defconfig  rockchip_rk3036_pcba_defconfig  rockchip_rk3036_recovery_defconfig  rockchip_rk3128H_defconfig  rockchip_rk3128H_recovery_defconfig  rockchip_rk312x_defconfig  rockchip_rk3229_defconfig  rockchip_rk3229_gva_pcba_defconfig  rockchip_rk3229_pcba_defconfig  rockchip_rk3229_recovery_defconfig  rockchip_rk322x_defconfig  rockchip_rk322x_dueros_defconfig  rockchip_rk322x_echo_defconfig  rockchip_rk3288_defconfig  rockchip_rk3288_recovery_defconfig  rockchip_rk3308_defconfig  rockchip_rk3308_release_defconfig  rockchip_rk3326_defconfig  rockchip_rk3326_recovery_defconfig  rockchip_rk3328_defconfig  rockchip_rk3328_gtk3_defconfig  rockchip_rk3399_defconfig  rockchip_rk3399_recovery_defconfig  rv1108-evb-v12_defconfig  rv1108_dbg_defconfig  rv1108_defconfig  sc_debug_defconfig  sc_release_defconfig
package/: Config.in  Makefile.in  pkg-waf.mk
package/rockchip/bootanimation/src/: CMakeLists.txt  S30BootAnimation  boot.cfg  bootanimation_main.cpp  drm_common.cpp  drm_common.h  rk_make.sh  start_launcher.sh
package/rockchip/modeset/src/: CMakeLists.txt  bootanimation.cpp  drm_common.cpp  modeset.cpp
(+185 files in other folders)
